# filelang

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  filelang.sln  filelang.vcxproj  filelang.vcxproj.filters  parser.sln  parser.vcxproj  parser.vcxproj.filters  reader.sln  reader.vcxproj  reader.vcxproj.filters  tokenizer.vcxproj  tokenizer.vcxproj.filters  tools.vcxproj  tools.vcxproj.filters
include/filelang/: main.h  tools.h  types.h
include/filelang/parser/: parser.h
include/filelang/reader/: reader.h
include/filelang/tokenizer/: tokenizer.h
res/: code.flc
src/filelang/: main.c  tools.c
src/filelang/parser/: parser.c
src/filelang/reader/: reader.c
src/filelang/tokenizer/: tokenizer.c
